# Econ-IQ-Core

./: .dockerignore  .env.example  .gitignore  API_ALIGNMENT_REPORT.md  API_CONTRACT_V2.md  ASSET_PRESERVATION_MATRIX.md  BACKEND_ENDPOINT_INVENTORY.md  CANONICAL_PLATFORM_V2.md  CANONICAL_SCORE_MODEL.md  CORE_BACKEND_ARCHITECTURE.md  DATABASE_ALIGNMENT.md  DATABASE_API_TRACEABILITY.md  Dockerfile  ECONIQ_CORE_MODULE_MAP.md  EXPLAINABILITY_V2.md  FEATURE_CATALOG_V2.md  FEATURE_LINEAGE_MATRIX.md  FILE_MIGRATION_MATRIX.md  FRONTEND_CONTEXT.md  LICENCE  PLATFORM_READINESS_VERDICT.md  PRE_ML_CERTIFICATION.md  README.md  REPOSITORY_CERTIFICATION.md  SIGNAL_REALITY_AUDIT.md  TODO.md  api_runner.py  bootstrap.py  check_db.py  create_tables.py  docker-compose.yml  main.py  ml_runner.py  policy.yaml  pyproject.toml  railway.toml  recompute_intelligence.py  seed_demo_customers.py  verify_feature_store.py  verify_ml_pipeline.py  (+2 more)
core/: create_superuser.py  main.py  recompute_all.py
docs/: ASSET_PRESERVATION_MATRIX.md  BACKEND_FREEZE.md  CALIBRATION_REPORT.md  CAPABILITY_HEALTH.md  CORE_BACKEND_ARCHITECTURE.md  DATABASE_ALIGNMENT.md  DEMO_SCRIPT.md  ECONIQ_CORE_MODULE_MAP.md  FILE_MIGRATION_MATRIX.md  FINAL_BACKEND_STATUS.md  FRONTEND_STATUS.md  JUDGE_WALKTHROUGH.md  KNOWN_LIMITATIONS.md  ML_MATURITY_ASSESSMENT.md  ML_PIPELINE_VERIFICATION.md  MODEL_REGISTRY.md  PREDICTION_PROVENANCE.md  README.md  SIMULATOR_LIMITATIONS.md
infra/: Dockerfile.api  Dockerfile.ml  Dockerfile.worker  docker-compose.yml  entrypoint.sh  supervisord.conf
scratch/: check_db.py
tests/: conftest.py  (+9 more)
(+288 files in other folders)
