[project]
name = "econ-core"
version = "0.1.0"
description = "Econiq Core Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=3.0.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cryptography>=48.0.0",
    "duckdb>=1.5.2",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastexcel>=0.20.2",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "polars>=1.40.1",
    "prometheus-client>=0.21.1",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.12.1",
    "python-multipart>=0.0.28",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "redis>=5.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "xlsx2csv>=0.8.6",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"


